Fixed menu spacing on diff res.

--- a/src/styling/MenuBar.css
+++ b/src/styling/MenuBar.css
@@ -92,7 +92,7 @@
 }
 
 .home-div {
-  margin-left:36%;
+  margin-left:37vw;
   padding:15px;
 }
 
